# DataOrientedDesignInGameDev

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: ECS.h  Engine.cpp  Engine.h  Entity.h  Particles.cpp  Particles.h  PerformanceMonitor.cpp  PerformanceMonitor.h  SpriteDOD.cpp  SpriteDOD.h  SpriteOOP.cpp  SpriteOOP.h  Utils.h
src/: main.cpp
